Set gap between banner paragraphs based on multi or single line, fix single line layout

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@
 
 body {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+    min-height: 100vh;
     font-family: "Inter", serif;
     background-color: #E5E7EB;
     text-align: center;
@@ -91,6 +94,8 @@ p {
 
 .banners-container {
     display: flex;
+    max-width: 900px;
+    justify-content: center;
 }
 
 .banners-labels {
@@ -103,9 +108,14 @@ p {
     text-align: start;
 }
 
+.single-line {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .banner {
     width: 800px;
-    height: 80px;
     background-color: white;
     display: flex;
     align-items: center;
@@ -118,6 +128,9 @@ p {
 .banner-text {
     display: flex;
     flex-direction: column;
+}
+
+.multi-line .banner-text {
     gap: 0.6em;
 }
 
